# shred_and_delete

./: Cargo.toml  README.md  resource.lib  resource.rc
src/: build.rs  main.rs  overwrite.rs  rename.rs  utils.rs
