[package]
name = "shred_and_delete"
version = "1.0.0"
edition = "2021"
build = "src\\build.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[dependencies]
rand = "0.8.5"
trash = "5.0.0"
walkdir = "2.5.0"

[build-dependencies]
winresource = "0.1.17"
